# mailjet_utils

./: .gitignore  Dockerfile  LICENSE  README.md
.github/workflows/: build.yml
mailjet_utils/: README.md  pyproject.toml
mailjet_utils/mailjet_utils/: app.py  models.py
